[gd_scene load_steps=19 format=2]

[ext_resource path="res://Art/CutSceneArtWork/random_selection.png" type="Texture" id=1]
[ext_resource path="res://Art/CutSceneArtWork/stary_background.jpg" type="Texture" id=2]
[ext_resource path="res://Art/Hellion_norings.png" type="Texture" id=3]
[ext_resource path="res://Art/CutSceneArtWork/background_1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/IntroDialogueScript.gd" type="Script" id=5]
[ext_resource path="res://Art/PermanentMarker-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Art/CutSceneArtWork/grey_button04.png" type="Texture" id=7]
[ext_resource path="res://Fonts/SpaceQuest-yOY3.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Animation/ScenesZoomInStars.tres" type="Animation" id=9]
[ext_resource path="res://Music/CutsceneMusic/Greatness-AShamaluevMusic.ogg" type="AudioStream" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.597902, 0.996503 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.503409 ), 0.0, 1.93125, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 0.3
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="CutScene" type="AnimationPlayer"]
autoplay = "ZoomInStars"
anims/ZoomInStars = ExtResource( 9 )

[node name="stary_background" type="Sprite" parent="."]
position = Vector2( 972.622, 530.787 )
scale = Vector2( 2.09145, 2.09145 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 970.433, 532.606 )
scale = Vector2( 1e-05, 1e-05 )
emitting = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="Stars" type="Sprite" parent="."]
visible = false
position = Vector2( 973.143, 518 )
scale = Vector2( 9.19643, 9.19643 )
texture = ExtResource( 4 )

[node name="Hellion_NoRings" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.333334 )
position = Vector2( 972, 540 )
rotation = -0.0329714
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 760.0
margin_right = 1827.0
margin_bottom = 1003.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroDialogueScript" type="RichTextLabel" parent="Panel"]
margin_left = 57.4388
margin_top = -33.6222
margin_right = 1731.44
margin_bottom = 126.378
custom_fonts/normal_font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Panel"]

[node name="Tween" type="Tween" parent="Panel"]

[node name="grey_button04" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 1557.8, 138.245 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Panel/grey_button04"]
visible = false
margin_left = -48.7904
margin_top = -12.0208
margin_right = 56.2096
margin_bottom = 11.9792
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PRESS ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="tween_completed" from="Panel/Tween" to="Panel" method="_on_Tween_tween_completed"]
